<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_visits"
        android:icon="@drawable/ic_baseline_list_alt_24"
        android:title="@string/title_visits" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>