...
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

    <TextView
        android:id="@+id/symptomsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/symptoms_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

...
